# ChangeLog for media-video/oxine
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/oxine/ChangeLog,v 1.36 2008/09/20 21:31:01 beandog Exp $

*oxine-0.7.1-r1 (20 Sep 2008)

  20 Sep 2008; Steve Dibb <beandog@gentoo.org> -oxine-0.6.3-r1.ebuild,
  -oxine-0.7.1.ebuild, +oxine-0.7.1-r1.ebuild:
  Add libcdio dep, bug 219868

  01 Aug 2008; nixnut <nixnut@gentoo.org> oxine-0.7.1.ebuild:
  Stable on ppc wrt bug 222303

  29 Jul 2008; Raúl Porcel <armin76@gentoo.org> oxine-0.7.1.ebuild:
  x86 stable wrt #222303

  29 Jul 2008; Steve Dibb <beandog@gentoo.org> oxine-0.7.1.ebuild:
  amd64 stable, bug 222303

  13 Apr 2008; Alexis Ballier <aballier@gentoo.org> oxine-0.6.3-r1.ebuild,
  oxine-0.7.1.ebuild:
  pkgconfig is only a build dep, bug #217278

  13 Apr 2008; Alexis Ballier <aballier@gentoo.org> -oxine-0.6.6.ebuild:
  remove unused version

  10 Apr 2008; Samuli Suominen <drac@gentoo.org> oxine-0.6.3-r1.ebuild,
  oxine-0.6.6.ebuild, oxine-0.7.1.ebuild:
  Missing pkgconfig dep wrt #216907.

*oxine-0.7.1 (11 Jan 2008)

  11 Jan 2008; Steve Dibb <beandog@gentoo.org> +oxine-0.7.1.ebuild:
  Version bump, bug 202145

  27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org> oxine-0.6.3-r1.ebuild,
  oxine-0.6.6.ebuild:
  Fixed quoting.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; oxine-0.5.ebuild,
  oxine-0.6.3-r1.ebuild, oxine-0.6.6.ebuild:
  Drop virtual/x11 references.

*oxine-0.6.6 (24 Mar 2007)

  24 Mar 2007; Steve Dibb <beandog@gentoo.org> +oxine-0.6.6.ebuild:
  Version bump

  04 Feb 2007; nixnut <nixnut@gentoo.org> oxine-0.6.3-r1.ebuild:
  Stable on wrt bug 164851

  03 Feb 2007; Peter Weller (welp) <welp@gentoo.org> oxine-0.6.3-r1.ebuild:
  Stable on amd64 wrt #164851

  02 Feb 2007; Raúl Porcel <armin76@gentoo.org> ChangeLog:
  x86 stable wrt bug 164851

*oxine-0.6.3-r1 (21 Dec 2006)

  21 Dec 2006; Steve Dibb <beandog@gentoo.org> +oxine-0.6.3-r1.ebuild: